fixed some spacing

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 .App {
 	width: 100vw;
-	background-color: black;
+	/* background-color: black; */
 	overflow: hidden;
 }
 
